Bug 359388 - Icons for SNI Qt apps not appearing
Summary: Icons for SNI Qt apps not appearing
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.5.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 359558 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-14 12:43 UTC by Christian (Fuchs)
Modified: 2016-05-15 09:53 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
Screenshot of the issue (41.33 KB, image/png)
2016-02-14 12:44 UTC, Christian (Fuchs)
Details
dbus-monitor output from Qt4 systray example app (26.67 KB, text/plain)
2016-02-15 18:26 UTC, Rex Dieter
Details
dbus-monitor output from PyQt4 systray example app (26.69 KB, text/plain)
2016-02-15 18:32 UTC, Rex Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-02-14 12:43:01 UTC
Might be related to the update to KF 5.19 I just made: 

Third party qt applications, namely skype and hp-systray (from hplip) that I tested, no longer have an icon in the systray. The space is reserved, but they just show up as blank.

Reproducible: Always

Steps to Reproduce:
1. Open a non-KDE / non-status notifier application with a systray icon

Actual Results:  
Icon is not shown

Expected Results:  
Icon is shown

SNI Qt: 0.2.6-r1
Qt: 5.5.1
KF:  5.19
Plasma: 5.5.4
Comment 1 Christian (Fuchs) 2016-02-14 12:44:39 UTC
Created attachment 97192 [details]
Screenshot of the issue

Screenshot of the issue, the part before - Skype is not a bug, I just removed my Skype handle because I don't need that to be public.
Comment 2 Christian (Fuchs) 2016-02-14 14:41:34 UTC
Additional info: this only happens when sni-qt is installed, the new xembedsniproxy works, _if_ sni-qt is not installed. However, this seems to not have been communicated well or received well by packagers, as e.g. gentoo still offers sni-qt and does not autostart xembedsniproxy. Shall add this as a bug report to gentoo.
Comment 3 David Edmundson 2016-02-15 16:49:50 UTC
SNI Qt should be used where possible.

xembedsniproxy is for apps that cannot use sni-qt, for example gtk/java apps.

It is expected that it works, though this sounds like a potential problem in SNI qt.

I'm going to need dbus logs (run dbus-monitor) for when you start hp system tray. Plus ideally command line output from that app.
Comment 4 Rex Dieter 2016-02-15 18:22:47 UTC
I can confirm, that some apps no longer display systray icons properly, including
* ksystraycmd (tested thunderbird, firefox)
* clementine
* skype
* google chrome apps

I'll attach a dbus-monitor log shortly
Comment 5 Christian (Fuchs) 2016-02-15 18:26:20 UTC
(In reply to David Edmundson from comment #3)

> I'm going to need dbus logs (run dbus-monitor) for when you start hp system
> tray. Plus ideally command line output from that app.

I'll gladly provide these either in private  (Fuchs on freenode) or if you tell me how to strip them down. By default, dbus-monitor contains loads of data, including passwords (!) in cleartext (!!) from kwallet, so I am not going to put that on bugs.kde.org. 

Also it's a bit tricky to strip it down manually, as just running it the couple of seconds that were needed whilst hp-systray was starting it produced roughly 6000 lines.

Kind regards, 

Christian
Comment 6 Rex Dieter 2016-02-15 18:26:58 UTC
Created attachment 97233 [details]
dbus-monitor output from Qt4 systray example app
Comment 7 Rex Dieter 2016-02-15 18:32:43 UTC
Created attachment 97234 [details]
dbus-monitor output from PyQt4 systray example app

another qt4-based systray example app that used to work (prior to kf5-5.19)
Comment 8 Rex Dieter 2016-02-15 20:14:01 UTC
2 logs now provided, undoing NEEDSINFO
Comment 9 Nick Sarnie 2016-02-15 23:35:20 UTC
I can confirm downgrading just Frameworks from 5.19 to 5.18 fixes this issue for me on Gentoo. 

Thanks,
sarnex
Comment 10 Hrvoje Senjan 2016-02-16 16:09:46 UTC
My 1st bet would be 5184ac94c916bf5e5e31d60db841c88009758a62 in plasma-framework
Comment 11 Hrvoje Senjan 2016-02-16 16:26:05 UTC
Yup.
Comment 12 Rex Dieter 2016-02-16 16:55:06 UTC
dvratil seems to be on to something,
https://git.reviewboard.kde.org/r/127091/
Comment 13 Daniel Vrátil 2016-02-16 20:16:07 UTC
Git commit 525bf2d377c21b41971a72d694a507bf2af0ada6 by Dan Vrátil.
Committed on 16/02/2016 at 20:16.
Pushed by dvratil into branch 'master'.

Fix IconItem not loading non-theme icons with name

Commit 5184ac introduced a small regression that caused IconItem
to no longer load non-theme icons with name set, for instance icons
coming from sni-qt, causing sni-qt apps to not show in systray.
FIXED-IN: 5.20
REVIEW: 127091

M  +4    -0    src/declarativeimports/core/iconitem.cpp

http://commits.kde.org/plasma-framework/525bf2d377c21b41971a72d694a507bf2af0ada6
Comment 14 David Edmundson 2016-02-20 18:35:56 UTC
*** Bug 359558 has been marked as a duplicate of this bug. ***